@@ -1,3 +1,6 @@
+22 August 2007: Wouter
+	- bogus TTL.
+
 21 August 2007: Wouter
 	- ANY response validation.
 	- store security status in cache.
